update new images

--- a/product.html
+++ b/product.html
@@ -89,15 +89,15 @@
                     </div>
 
                     <div>
-                        <img src="./Images/pp5.jpg" alt="pp1" class="w-70 h-60 inline hover:shadow-xl  transform hover:-translate-y-2 ">
-                        <h1> Buddha House Plants </h1>
+                        <img src="./Images/pp9.jpg" alt="pp1" class="w-70 h-60 inline hover:shadow-xl  transform hover:-translate-y-2 ">
+                        <h1> Mordern House Plants </h1>
                         <p>$20</p>
         
                     </div>
 
                     <div>
-                        <img src="./Images/pp6.jpg" alt="pp1" class="w-70 h-60 inline hover:shadow-xl  transform hover:-translate-y-2 ">
-                        <h1> Modern Outdoor Plants</h1>
+                        <img src="./Images/pp4.jpg" alt="pp1" class="w-70 h-60 inline hover:shadow-xl  transform hover:-translate-y-2 ">
+                        <h1> Buddha House Plants</h1>
                         <p>$40</p>
         
                     </div>
