update the new images

--- a/product.html
+++ b/product.html
@@ -83,7 +83,7 @@
 
                     <div>
                         <img src="./Images/pp10.jpg" alt="pp1" class="w-70 h-60 inline hover:shadow-xl  transform hover:-translate-y-2 ">
-                        <h1> Modern Outdoor Plants </h1>
+                        <h1> Modern indoor Plants </h1>
                         <p>$40</p>
         
                     </div>
