--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
 
         <div class="md:hidden">
-            <i class="fa-solid fa-bars"></i>
+            <i id="menuicon" class="fa-solid fa-bars"></i>
         </div>
 
         <ul class="  gap-5 text-gray-600 hidden md:flex">
@@ -40,6 +40,34 @@
 
         
     </nav>
+
+    <!--Side Navbar-->
+    <section id="sidenav" class="bg-green-100 fixed z-20 top-0 transition-all duration-1000" style="width: 50%;height: 100vh; right: -50%;"> 
+
+        <div class="text-right p-5" >
+            <p id="closenav" class="inline cursor-pointer">X</p>
+
+        </div>
+
+        <ul class=" flex flex-col gap-10 items-center text-gray-600 ">
+            <li >
+                <a href="index.html" class="hover:underline hover:text-black">Home</a>
+            </li>
+
+            <li>
+                <a href="product.html" class="hover:underline hover:text-black ">Product</a>
+            </li>
+
+            <li>
+                <a href="contact.html" class="hover:underline hover:text-black">Contact</a>
+            </li>
+
+        </ul>
+
+
+
+    </section>
+
 
 
     <!--Header Section-->
@@ -210,7 +238,7 @@
 
 
 
-          
+<script src="index.js"></script>       
 
 </body>
 </html>
